# toDo

./: CMakeLists.txt  README.md
include/: list.h  node.h  task.h
src/: list.cpp  main.cpp  node.cpp  task.cpp
tests/: test_list.cpp  test_main.cpp  test_node.cpp  test_task.cpp
